--- a/src/streamlit_plotly_events/frontend/package.json
+++ b/src/streamlit_plotly_events/frontend/package.json
@@ -17,7 +17,8 @@
     "react-plotly.js": "^2.4.0",
     "react-scripts": "3.4.1",
     "streamlit-component-lib": "^1.2.0",
-    "typescript": "~3.8.0"
+    "ts-node": "^10.8.1",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@types/plotly.js": "^1.50.16",
